# WeatherRoutingTool

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  LICENSE  README.md  __init__.py  analysis.py  cli.py  compare.py  compare_multiple_routes.py  compare_routes.py  config.example.json  config.json  config.py  config.template.json  config.template.multipleroutes.json  convert_csv_to_nc.py  create_depth.py  depth.nc  docker-compose.yaml  docker-compose.yml  execute_routing.py  flake8.sh  gdfDB.sqlite  generate_90h_weather.py  generate_weather.py  load_wrt.sh  min_time_route.json  min_time_routeroute.json  pyproject.toml  pytest.ini  requirements-without-deps.txt  requirements.core.txt  requirements.test.txt  requirements.txt  requirements_ga.txt  (+9 more)
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docs.yaml  docs.yml  linting_and_tests.yaml  weather_routing_tool.yaml
WeatherRoutingTool/: __init__.py  _version.py  cli.py  config.py  config.py.orig  config_pydantic.py  execute_routing.py  mediator.py  routeparams.py  ship_config_pydantic.py  test_maripower_settings_for_different_courses.py  test_maripower_settings_for_specific_route.py  test_maripower_settings_for_specific_route_for.py  weather.py  weather_factory.py
WeatherRoutingTool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
WeatherRoutingTool/EnvironmentalData/: weather_factory.py
WeatherRoutingTool/additional_code/: apitesting.py  azitest.py  converstion.py  converstion1.py  convtest.py  router2.py
WeatherRoutingTool/algorithms/: DataUtils.py  Genetic.py  GeneticUtils.py  Optimize.py  RunGenetic.py  __init__.py  data_utils.py  genetic.py  genetic_utils.py  isobased.py  isochrone.py  isofuel.py  routingalg.py  routingalg_factory.py  run_genetic.py
WeatherRoutingTool/constraints/: __init__.py  constraints.py  route_postprocessing.py
WeatherRoutingTool/environmental_data/: weather.py  weather_facade.py  weather_factory.py
WeatherRoutingTool/ship/: __init__.py  direct_power_boat.py  maripower_tanker.py  ship.py  ship_config.py  ship_config.py.orig  ship_factory.py  shipparams.py  shipparams.py.orig  weatherparams.py  write_fuel_for_route.py
WeatherRoutingTool/tests/: test_constraints.py  test_graphics.py  test_isobased.py  test_isofuel_population.py  test_routingalg.py  test_ship.py
WeatherRoutingTool/utils/: __init__.py  formatting.py  graphics.py  maps.py  unit_conversion.py
_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/.doctrees/: environment.pickle  index.doctree
_build/_modules/: index.html
additional_code/: forecasts.py  onland_test.py
algorithms/: DataUtils.py  Genetic.py  GeneticUtils.py  Optimize.py  RunGenetic.py  __init__.py  isobased.py  isofuel.py  routingalg.py  routingalg_factory.py
analysis_files/: compare_routes.py  dpm_compared_to_maripower.py  fuel_consumption_for_specific_route.py  maripower_for_different_courses.py  run_power_estimation_per_route.sh.orig
config/: base_config.json  coastal_config.json  optimized_config.json
constraints/: __init__.py  constraints.py
dashboard/: README.md  app.py  dummy_route.json  generate_dummy_route.py  requirements.txt  utils.py
data_example/: routemin_time_routeroute.json
docs/: Makefile  conf.py  index.rst  known_issues.md  requirements.txt
examples/: genetic_examples.py  weather_params_demo.py
output/: min_fuel_route.json
scripts/: compare_algorithm_performance.py  compare_multiple_routes.py  compare_objectives.py  compare_routes.py  dijkstra.py  dpm_compared_to_maripower.py  fuel_consumption_for_specific_route.py  fuel_consumption_for_specific_route_gzip.py  initial_population.py  maripower_for_different_courses.py  minimum_cost_path.py  npz_to_geotiff.py
ship/: __init__.py  ship.py
tests/: basic_test_func.py  config.genetic_test.json  config.isofuel_single_route.json  config.tests.json  config.tests.json.orig  config.tests_manualship.json  config.tests_pydantic.json  config.tests_simpleship.json  conftest.py  shipconfig_FujiwaraShip.json  shipconfig_manualship.json  shipconfig_simpleship.json  test_compare.py  test_config.py  test_config.py.orig  test_constraints.py  test_continuous_check.py  test_continuous_check_duplicate.py  test_crossover_edge_case.py  test_data_utils.py  test_direct_power_method.py  test_formatting.py  test_genetic.py  test_genetic_mcdm.py  test_genetic_shortest_route.py  test_genetic_termination.py  test_graphics.py  test_isobased.py  test_maps.py  test_maripower_tanker.py  test_mutation.py  test_path.py  test_route_postprocessing.py  test_route_utils.py  test_routeparams.py  test_routing_problem.py  test_routing_problem_get_power.py  test_routing_problem_power.py  test_routingalg.py  test_ship.py  (+6 more)
utils/: __init__.py  formatting.py  graphics.py  unit_conversion.py
weather_routing_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+142 files in other folders)
