[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "WeatherRoutingTool"
version = "0.1"
authors = [
  { name="52N authors", email="info@52north.org" },
]
description = "Python package for weather routing"
readme = "README.md"
#license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
geo = ["cartopy>0.20.0", "geopandas", "shapely", "global_land_mask"]
vis = ["matplotlib", "seaborn"]
data = ["dask", "datacube", "netcdf4", "scikit-image"]
all = [
    "cartopy>0.20.0", "geopandas", "shapely", "global_land_mask",
    "matplotlib", "seaborn",
    "dask", "datacube", "netcdf4", "scikit-image"
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["WeatherRoutingTool*"]
